# azure-event-hub-demo

./: pyproject.toml  run.py
eventador/: consumer.py  publisher.py
