[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eventador"
version = "0.1.0"
description = ""
authors = ["Chris Latham <cl@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
azure-eventhub = "^5.6.1"
azure-eventhub-checkpointstoreblob = "^1.1.4"
click = "^8.0.3"

[tool.poetry.group.dev.dependencies]
black = "^21.9-beta.0"
pylint = "^2.11.1"
mypy = "^0.910"
pytest = "^6.2.5"
ptpython = "^3.0.20"
isort = "^5.9.3"
